[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ligandparam"
version = "0.2.0"
description = "A ligand parameterization package for Amber"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
  {name = "Zeke Piskulich", email = "piskulichz@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
]
urls = { "Homepage" = "https://github.com/piskulichz/ligandparam" }

[tool.setuptools]
packages = [
      "ligandparam",
      "ligandparam.io", 
      "ligandparam.multiresp",
      "ligandparam.recipes", 
      "ligandparam.stages"
  ]
