[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ligandparam"
version = "0.3.0"
description = "A ligand parameterization package for Amber"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
  {name = "Zeke Piskulich", email = "piskulichz@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy<2",
  "pandas",
  "requests",
  "MDAnalysis>2.7.0",
  "pathlib",
  "parmed"
]
extra-dependencies = [
  "openbabel"
]

urls = { "Homepage" = "https://github.com/piskulichz/ligandparam" }

[project.scripts]
ligfix = "ligandparam.cli.cli_lighfix:ligfix"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
skip-magic-trailing-comma = true

