[tool.poetry]
name = "ligand-param"
version = "0.1.0"
description = "This is a python package for parametrizing ligands for the Amber Molecular Dynamics simulation program."
authors = ["Zeke Piskulich <piskulichz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
scipy = "^1.14.1"
MDAnalysis = "^2.7.0"
pathlib = "^1.0.1"
ParmEd = "^4.2.2"
requests = "^2.32.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
